// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render as article element, when passed "article" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
}

<article
  className="circuit-0 circuit-1"
  size="mega"
>
  ARTICLE heading
</article>
`;

exports[`Text should render as div element, when passed "div" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
}

<div
  className="circuit-0 circuit-1"
  size="mega"
>
  DIV heading
</div>
`;

exports[`Text should render as p element, when passed "p" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0 circuit-1"
  size="mega"
>
  P heading
</p>
`;

exports[`Text should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  margin-bottom: 0;
}

<p
  className="circuit-0 circuit-1"
  size="mega"
/>
`;

exports[`Text should render with size giga, when passed "giga" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 18px;
  line-height: 28px;
}

<p
  className="circuit-0 circuit-1"
  size="giga"
>
  giga heading
</p>
`;

exports[`Text should render with size kilo, when passed "kilo" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 13px;
  line-height: 20px;
}

<p
  className="circuit-0 circuit-1"
  size="kilo"
>
  kilo heading
</p>
`;

exports[`Text should render with size mega, when passed "mega" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0 circuit-1"
  size="mega"
>
  mega heading
</p>
`;
